fix: add missing i18n

--- a/locales/en.json
+++ b/locales/en.json
@@ -6,7 +6,6 @@
     "API description document protocol": "API description document protocol",
     "API gateway": "API gateway",
     "API logo": "API logo",
-    "API management platform": "API management platform",
     "API market": "API market",
     "API name": "API name",
     "API path": "API path",
@@ -18,7 +17,6 @@
     "Alibaba Cloud": "Alibaba Cloud",
     "All members of the organization can view": "all members of the current company can view",
     "App": "App",
-    "App Center": "App Center",
     "Approve": "Approve",
     "April": "April",
     "Are you sure to leave?": "Are you sure to leave?",
@@ -51,7 +49,6 @@
     "DingTalk address": "DingTalk address",
     "Dubai": "Dubai",
     "East China {num}": "East China {num}",
-    "Enter the keyword query": "Enter the keyword query",
     "Europe & America": "Europe & America",
     "Fast data": "Fast data",
     "February": "February",
@@ -543,8 +540,8 @@
     "joined projects": "joined projects",
     "jump server": "jump server",
     "key": "key",
-    "keywords": "keywords",
     "key only can be letters": "key only can be letters",
+    "keywords": "keywords",
     "label": "label",
     "label tip": "label tip",
     "last login time": "last login time",
@@ -584,6 +581,7 @@
     "merge": "merge",
     "merged at": "merged at",
     "message": "message",
+    "message center": "message center",
     "meters": "meters",
     "microService": "microService",
     "middleware chart": "middleware chart",
