--- a/locales/zh.json
+++ b/locales/zh.json
@@ -6,7 +6,6 @@
     "API description document protocol": "API 描述文档协议",
     "API gateway": "API 网关",
     "API logo": "API 图标",
-    "API management platform": "API 管理平台",
     "API market": "API 集市",
     "API name": "API 名称",
     "API path": "API 路径",
@@ -18,7 +17,6 @@
     "Alibaba Cloud": "阿里云",
     "All members of the organization can view": "当前组织下所有成员都可以查看",
     "App": "应用",
-    "App Center": "应用中心",
     "Approve": "审批",
     "April": "4月",
     "Are you sure to leave?": "确定离开",
@@ -51,7 +49,6 @@
     "DingTalk address": "钉钉地址",
     "Dubai": "迪拜",
     "East China {num}": "华东{num}",
-    "Enter the keyword query": "输入关键字查询",
     "Europe & America": "欧洲与美洲",
     "Fast data": "快数据平台",
     "February": "2月",
@@ -543,8 +540,8 @@
     "joined projects": "我的项目",
     "jump server": "跳板机",
     "key": "标示",
-    "keywords": "关键词",
     "key only can be letters": "key只能为英文",
+    "keywords": "关键词",
     "label": "标签",
     "label tip": "标签提示",
     "last login time": "最近登录时间",
@@ -584,6 +581,7 @@
     "merge": "合并",
     "merged at": "合并于",
     "message": "消息",
+    "message center": "消息中心",
     "meters": "米",
     "microService": "微服务",
     "middleware chart": "中间件图表",
