fix: fix workbench style

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1695,8 +1695,8 @@
     "serviceMesh": "serviceMesh",
     "set as default": "set as default",
     "set default branch successfully": "set default branch successfully",
-    "set frequently used app as star app from the list below": "set frequently used app as star app from the list below",
-    "set frequently used project as star project from the list below": "set frequently used project as star project from the list below",
+    "choose to set as a star app from the list of my apps below": "choose to set as a star app from the list of my apps below",
+    "choose to set as a star project from the list of my projects below": "choose to set as a star project from the list of my projects below",
     "set it to open all": "set it to open all",
     "set the default merge request description template": "set the default merge request description template",
     "settings updated successfully": "settings updated successfully",
