--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1053,6 +1053,8 @@
     "choose certificate": "choose certificate",
     "choose module": "choose module",
     "choose the workflow file (master branch)": "choose the workflow file (master branch)",
+    "choose to set as a star app from the list of my apps below": "choose to set as a star app from the list of my apps below",
+    "choose to set as a star project from the list of my projects below": "choose to set as a star project from the list of my projects below",
     "circulation setting": "circulation setting",
     "class catalog": "class catalog",
     "click to edit": "click to edit",
@@ -1694,8 +1696,6 @@
     "serviceMesh": "serviceMesh",
     "set as default": "set as default",
     "set default branch successfully": "set default branch successfully",
-    "choose to set as a star app from the list of my apps below": "choose to set as a star app from the list of my apps below",
-    "choose to set as a star project from the list of my projects below": "choose to set as a star project from the list of my projects below",
     "set it to open all": "set it to open all",
     "set the default merge request description template": "set the default merge request description template",
     "settings updated successfully": "settings updated successfully",
@@ -1901,6 +1901,7 @@
     "site management": "site management"
   },
   "layout": {
+    "announcement": "announcement",
     "approval": "approval",
     "back to application list": "back to application list",
     "back to dop": "back to DevOps platform",
