--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1053,6 +1053,8 @@
     "choose certificate": "选择证书",
     "choose module": "选择模块",
     "choose the workflow file (master branch)": "选择workflow文件（master分支）",
+    "choose to set as a star app from the list of my apps below": "从以下我的应用列表中选择设置为标星应用",
+    "choose to set as a star project from the list of my projects below": "从以下我的项目列表中选择设置为标星项目",
     "circulation setting": "流转设置",
     "class catalog": "类目录",
     "click to edit": "点击即可编辑",
@@ -1694,8 +1696,6 @@
     "serviceMesh": "服务网格",
     "set as default": "设为默认",
     "set default branch successfully": "设置默认分支成功",
-    "choose to set as a star app from the list of my apps below": "从以下我的应用列表中选择设置为标星应用",
-    "choose to set as a star project from the list of my projects below": "从以下我的项目列表中选择设置为标星项目",
     "set it to open all": "置为 \"全部打开\"",
     "set the default merge request description template": "设置默认的合并请求描述模板",
     "settings updated successfully": "更新设置成功",
@@ -1901,6 +1901,7 @@
     "site management": "站点管理"
   },
   "layout": {
+    "announcement": "公告",
     "approval": "审批管理",
     "back to application list": "返回应用列表",
     "back to dop": "返回 DevOps 平台",
