--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -899,6 +899,8 @@
     "ability app": "ability app",
     "access control value": "access control value",
     "account switching": "account switching",
+    "active ranking": "active ranking",
+    "active value": "active value",
     "activity log": "activity log",
     "actual value": "actual value",
     "add": "add",
@@ -1053,6 +1055,8 @@
     "choose certificate": "choose certificate",
     "choose module": "choose module",
     "choose the workflow file (master branch)": "choose the workflow file (master branch)",
+    "choose to set as a star app from the list of my apps below": "choose to set as a star app from the list of my apps below",
+    "choose to set as a star project from the list of my projects below": "choose to set as a star project from the list of my projects below",
     "circulation setting": "circulation setting",
     "class catalog": "class catalog",
     "click to edit": "click to edit",
@@ -1070,6 +1074,7 @@
     "code smell": "code smell",
     "code vulnerability": "code vulnerability",
     "code-trigger-CI": "Continuous integration is triggered when the branch code changes",
+    "collaboration items created/updated": "collaboration items created/updated",
     "collapse file": "collapse file",
     "command": "command",
     "comment area": "comment area",
@@ -1127,6 +1132,7 @@
     "create new file": "create new file",
     "create new folder": "create new folder",
     "create test report": "create test report",
+    "created/updated automated test cases": "created/updated automated test cases",
     "createdAt": "createdAt",
     "creating file is only allowed under the branch": "creating file is only allowed under the branch",
     "creating folder is only allowed under the branch": "creating folder is only allowed under the branch",
@@ -1134,6 +1140,7 @@
     "creation method": "creation method",
     "current": "current",
     "current branch or path": "current branch or path",
+    "current month": "current month",
     "currently supports importing Excel files": "currently support importing Excel files",
     "currently supports importing Xmind and Excel files": "currently support importing Xmind and Excel two types of files",
     "custom": "custom",
@@ -1470,6 +1477,8 @@
     "notify role": "notify role",
     "number of application instance": "number of application instance",
     "number of case": "number of case",
+    "number of code submissions": "number of code submissions",
+    "number of execution pipelines": "number of execution pipelines",
     "number of interface passing": "pass number",
     "number of lines not covered": "number of lines not covered",
     "numeric type": "numeric type",
@@ -1509,6 +1518,7 @@
     "path must start with /": "path must start with /",
     "pending": "pending",
     "permission configuration": "permission configuration",
+    "personal contribution": "personal contribution",
     "pinned successfully": "pinned successfully",
     "pipeline ID": "pipeline ID",
     "pipeline configuration": "pipeline configuration",
@@ -1583,7 +1593,6 @@
     "plugin deployment": "plugin deployment",
     "port cannot be empty": "port cannot be empty",
     "ports": "ports",
-    "position to today": "position to today",
     "post comment": "post comment",
     "preconditions": "preconditions",
     "previous": "previous",
@@ -1612,6 +1621,7 @@
     "push config": "push config",
     "push to variable config": "push to variable config",
     "quality reports": "reports",
+    "rank": "rank",
     "read only and inoperable": "read only and inoperable",
     "reason for rejection": "reason for rejection",
     "recent detection time": "recent detection time",
@@ -1676,6 +1686,7 @@
     "search by owned project": "search by owned project",
     "search for": "search for",
     "search label under project": "search label under project",
+    "search name": "search name",
     "searchCenter": "searchCenter",
     "security": "security",
     "select a business domain": "select a business domain",
@@ -1695,8 +1706,6 @@
     "serviceMesh": "serviceMesh",
     "set as default": "set as default",
     "set default branch successfully": "set default branch successfully",
-    "choose to set as a star app from the list of my apps below": "choose to set as a star app from the list of my apps below",
-    "choose to set as a star project from the list of my projects below": "choose to set as a star project from the list of my projects below",
     "set it to open all": "set it to open all",
     "set the default merge request description template": "set the default merge request description template",
     "settings updated successfully": "settings updated successfully",
@@ -2751,7 +2760,6 @@
     "message content": "message content",
     "monitor log": "monitor log",
     "operation time": "operation time",
-    "pattern": "pattern",
     "please": "please ",
     "please fill in the correct domain name": "please fill in the correct domain name",
     "please fill in the custom domain name": "please fill in the custom domain name",
