--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -899,6 +899,8 @@
     "ability app": "能力应用",
     "access control value": "门禁值",
     "account switching": "账号切换中",
+    "active ranking": "活跃排名",
+    "active value": "活跃值",
     "activity log": "活动日志",
     "actual value": "实际值",
     "add": "新增",
@@ -1053,6 +1055,8 @@
     "choose certificate": "选择证书",
     "choose module": "选择模块",
     "choose the workflow file (master branch)": "选择workflow文件（master分支）",
+    "choose to set as a star app from the list of my apps below": "从以下我的应用列表中选择设置为标星应用",
+    "choose to set as a star project from the list of my projects below": "从以下我的项目列表中选择设置为标星项目",
     "circulation setting": "流转设置",
     "class catalog": "类目录",
     "click to edit": "点击即可编辑",
@@ -1070,6 +1074,7 @@
     "code smell": "代码异味",
     "code vulnerability": "代码脆弱点",
     "code-trigger-CI": "该分支代码发生变化时触发持续集成",
+    "collaboration items created/updated": "创建/更新了协同事项",
     "collapse file": "收起文件",
     "command": "命令",
     "comment area": "评论区",
@@ -1127,6 +1132,7 @@
     "create new file": "新建文件",
     "create new folder": "创建文件夹",
     "create test report": "生成测试报告",
+    "created/updated automated test cases": "创建/更新了自动化测试用例",
     "createdAt": "创建时间",
     "creating file is only allowed under the branch": "只能在分支下新建文件",
     "creating folder is only allowed under the branch": "只能在分支下新建文件夹",
@@ -1134,6 +1140,7 @@
     "creation method": "创建方式",
     "current": "当前",
     "current branch or path": "当前分支或路径",
+    "current month": "本月",
     "currently supports importing Excel files": "当前支持导入Excel类型文件",
     "currently supports importing Xmind and Excel files": "当前支持导入Xmind及Excel两种类型文件",
     "custom": "自定义",
@@ -1470,6 +1477,8 @@
     "notify role": "通知角色",
     "number of application instance": "应用实例数",
     "number of case": "用例数",
+    "number of code submissions": "提交代码次数",
+    "number of execution pipelines": "执行流水线次数",
     "number of interface passing": "接口通过数",
     "number of lines not covered": "未覆盖行数",
     "numeric type": "数值类型",
@@ -1509,6 +1518,7 @@
     "path must start with /": "path必须以 / 开头",
     "pending": "待处理",
     "permission configuration": "权限配置",
+    "personal contribution": "个人贡献",
     "pinned successfully": "置顶成功",
     "pipeline ID": "流水线ID",
     "pipeline configuration": "流水线配置",
@@ -1583,7 +1593,6 @@
     "plugin deployment": "插件部署",
     "port cannot be empty": "端口不能为空",
     "ports": "端口",
-    "position to today": "定位至今天",
     "post comment": "发表评论",
     "preconditions": "前置条件",
     "previous": "上一步",
@@ -1612,6 +1621,7 @@
     "push config": "推送配置",
     "push to variable config": "推送到变量配置",
     "quality reports": "质量报告",
+    "rank": "排名",
     "read only and inoperable": "只读模式，不可操作",
     "reason for rejection": "拒绝理由",
     "recent detection time": "最近检测时间",
@@ -1676,6 +1686,7 @@
     "search by owned project": "通过所在项目搜索",
     "search for": "搜索",
     "search label under project": "搜索项目下的标签",
+    "search name": "搜索姓名",
     "searchCenter": "搜索中心",
     "security": "安全",
     "select a business domain": "选择业务域",
@@ -1695,8 +1706,6 @@
     "serviceMesh": "服务网格",
     "set as default": "设为默认",
     "set default branch successfully": "设置默认分支成功",
-    "choose to set as a star app from the list of my apps below": "从以下我的应用列表中选择设置为标星应用",
-    "choose to set as a star project from the list of my projects below": "从以下我的项目列表中选择设置为标星项目",
     "set it to open all": "置为 \"全部打开\"",
     "set the default merge request description template": "设置默认的合并请求描述模板",
     "settings updated successfully": "更新设置成功",
@@ -2751,7 +2760,6 @@
     "message content": "消息内容",
     "monitor log": "监控日志",
     "operation time": "操作时间",
-    "pattern": "模式",
     "please": "请",
     "please fill in the correct domain name": "请填写正确的域名",
     "please fill in the custom domain name": "请填写自定义域名",
