--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -800,6 +800,7 @@
     "API list": "API list",
     "API overview": "API overview",
     "APIs": "APIs",
+    "About": "About",
     "Add Followers": "Add Followers",
     "Addon": "Addon",
     "After the use case is selected, the batch operation can be performed.": "After the use case is selected, the batch operation can be performed.",
@@ -829,6 +830,7 @@
     "Format must be 2w 3d 4h 5m": "Format must be 2w 3d 4h 5m",
     "Function unavailable in network block period.": "this function cannot be used during the network closure!",
     "Git reference": "Git reference",
+    "Homepage": "Homepage",
     "If it is a bugfix, please add a test case proving that the bug is fixed.": "If it is a bugfix, please add testcase to prove the bug fix",
     "If you choose to configure an external code repository, the DevOps platform will no longer provide functions such as  code browsing, submission history viewing, branch management or merge requests. Other functions such as pipeline and deployment will not be affected.": "After choosing to the external code repository, the DevOps platform will no longer provide online code repository functions such as code browsing, commit history viewing, branch management, and merge requests, and other functions such as pipelines and deployment centers will not be affected.",
     "It can only be dragged to the end of the corresponding month. Please go to the details page for better modification.": "this drag can only be dragged to the end of the corresponding month, please go to the details page for precise modification",
@@ -857,6 +859,7 @@
     "Please enter the issue title": "Please enter the issue title",
     "Please enter the repository address started with http or https.": "Please enter the repository address started with http or https.",
     "Please fill in the json expression of obtained target key to determine if the key exists.": "Please fill in the json expression of obtained target key to determine if the key exists.",
+    "Project homepage": "Project homepage",
     "Projects": "Projects",
     "Quickly create from artifacts": "Quickly create from artifacts",
     "Quickly update from artifacts": "Quickly update from artifacts",
@@ -865,6 +868,7 @@
     "Search for the test plan I am involved in/responsible for.": "Search for the test plan I am involved in/responsible for.",
     "System built-in Git repository": "System built-in Git repository",
     "Tags can be used for issue and test management, to quickly locate and filter relevant content.": "Tags can be used in issue management and test management, and reasonable use can quickly locate and filter related content",
+    "Tell about your project in one sentence, so that more people can quickly understand your project, go to": "Tell about your project in one sentence, so that more people can quickly understand your project, go to",
     "The application cannot be restored after deletion.Please enter {name} to confirm.": "after the application is deleted, it cannot be restored. please enter {name} to confirm",
     "The artifact is a release product of pipeline, and the environment selected below can be directly deployed by the artifact of this branch.": "The artifact is a release product of pipeline, and the environment selected below can be directly deployed by the artifact of this branch.",
     "The creation of the service takes a while, please wait a moment": "The creation of the service takes a while, please wait a moment",
@@ -892,6 +896,7 @@
     "Today": "T",
     "Tody is {time}": "Tody is {time}",
     "Up to 255 characters for directory name": "Up to 255 characters for directory name",
+    "Up to 255 characters for url path": "Up to 255 characters for url path",
     "When enabled, application deployment needs to be reviewed and approved by the project administrator.": "When enabled, application deployment needs to be reviewed and approved by the project administrator.",
     "When you click directly, it will execute cases without environment.": "when you click directly, will execute cases without environment",
     "Work description": "Work description",
@@ -1053,8 +1058,11 @@
     "choose certificate": "choose certificate",
     "choose module": "choose module",
     "choose the workflow file (master branch)": "choose the workflow file (master branch)",
+    "choose to set as a star app from the list of my apps below": "choose to set as a star app from the list of my apps below",
+    "choose to set as a star project from the list of my projects below": "choose to set as a star project from the list of my projects below",
     "circulation setting": "circulation setting",
     "class catalog": "class catalog",
+    "click to add URL path": "click to add URL path",
     "click to edit": "click to edit",
     "click to expand": "click to expand",
     "clone application": "clone application",
@@ -1505,6 +1513,7 @@
     "pass": "pass",
     "passing rate": "passing rate",
     "paste": "paste",
+    "paste the url path here": "paste the url path here",
     "path": "path",
     "path must start with /": "path must start with /",
     "pending": "pending",
@@ -1560,7 +1569,9 @@
     "please enter, within {num} characters": "please enter, within {num} characters",
     "please fill in the correct ip": "please fill in the correct ip",
     "please fill in the correct port number": "please fill in the correct port number",
+    "please fill in the correct the url path!": "please fill in the correct the url path!",
     "please fill in the test plan name": "please fill in the test plan name",
+    "please give the url path a simple and understandable name": "please give the url path a simple and understandable name",
     "please input the value": "please input the value",
     "please input time": "please input time",
     "please pass in the method as the children of the exportPdf component": "please pass in the method as the children of the exportPdf component",
@@ -1583,7 +1594,6 @@
     "plugin deployment": "plugin deployment",
     "port cannot be empty": "port cannot be empty",
     "ports": "ports",
-    "position to today": "position to today",
     "post comment": "post comment",
     "preconditions": "preconditions",
     "previous": "previous",
@@ -1695,8 +1705,6 @@
     "serviceMesh": "serviceMesh",
     "set as default": "set as default",
     "set default branch successfully": "set default branch successfully",
-    "choose to set as a star app from the list of my apps below": "choose to set as a star app from the list of my apps below",
-    "choose to set as a star project from the list of my projects below": "choose to set as a star project from the list of my projects below",
     "set it to open all": "set it to open all",
     "set the default merge request description template": "set the default merge request description template",
     "settings updated successfully": "settings updated successfully",
@@ -1830,6 +1838,7 @@
     "tips of publish api 1": "the release version needs to be given in accordance with the semantic version specification referring to the following link",
     "tips of publish api 2": "when the document version changes, the major version number of the released version needs to be incremented",
     "title required": "title required",
+    "to configure": "to configure",
     "total": "total",
     "total number of interfaces": "total number of interfaces",
     "total number of use cases": "total number of use cases",
@@ -1892,7 +1901,8 @@
     "yml-addon-not-exist-tip": "the current instance does not exist, please switch to edit mode to add again",
     "your browser does not support WebSocket!": "your browser does not support WebSocket!",
     "{num} members are following": "{num} members are following",
-    "{num} people followed": "{num} people followed"
+    "{num} people followed": "{num} people followed",
+    "项目主页": "项目主页"
   },
   "ecp": {
     "Edge computing": "Edge computing",
@@ -2751,7 +2761,6 @@
     "message content": "message content",
     "monitor log": "monitor log",
     "operation time": "operation time",
-    "pattern": "pattern",
     "please": "please ",
     "please fill in the correct domain name": "please fill in the correct domain name",
     "please fill in the custom domain name": "please fill in the custom domain name",
