--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -800,6 +800,7 @@
     "API list": "API 列表",
     "API overview": "API 概况",
     "APIs": "接口列表",
+    "About": "关于",
     "Add Followers": "添加关注人",
     "Addon": "扩展服务",
     "After the use case is selected, the batch operation can be performed.": "选中用例后，才能进行批量操作",
@@ -829,6 +830,7 @@
     "Format must be 2w 3d 4h 5m": "格式必须为 2w 3d 4h 5m",
     "Function unavailable in network block period.": "封网期间不可使用该功能！",
     "Git reference": "Git 引用",
+    "Homepage": "主页",
     "If it is a bugfix, please add a test case proving that the bug is fixed.": "如果是 bugfix，请增加证明 bug 解决的 testcase",
     "If you choose to configure an external code repository, the DevOps platform will no longer provide functions such as  code browsing, submission history viewing, branch management or merge requests. Other functions such as pipeline and deployment will not be affected.": "选择配置外置代码仓库后，DevOps 平台将不再提供代码浏览、提交历史查看、分支管理和合并请求等在线代码仓库功能，流水线和部署中心等其他功能不受影响。",
     "It can only be dragged to the end of the corresponding month. Please go to the details page for better modification.": "本次拖拽只能拖拽至对应月末, 请至详情页进行精确修改",
@@ -857,6 +859,7 @@
     "Please enter the issue title": "请输入事项标题",
     "Please enter the repository address started with http or https.": "请输入以http或https开头的仓库地址",
     "Please fill in the json expression of obtained target key to determine if the key exists.": "值请填获取目标key的json表达式，以判断该key是否存在。",
+    "Project homepage": "项目主页",
     "Projects": "项目管理",
     "Quickly create from artifacts": "通过制品快速创建",
     "Quickly update from artifacts": "通过制品快速更新",
@@ -865,6 +868,7 @@
     "Search for the test plan I am involved in/responsible for.": "搜索我参与/负责的测试计划",
     "System built-in Git repository": "系统内置Git仓库",
     "Tags can be used for issue and test management, to quickly locate and filter relevant content.": "标签可以用于事项管理、测试管理中，合理使用能够快速定位和过滤相关内容",
+    "Tell about your project in one sentence, so that more people can quickly understand your project, go to": "用一句话讲述你的项目，让更多的人快速了解你的项目，前往",
     "The application cannot be restored after deletion.Please enter {name} to confirm.": "应用删除后无法恢复，请输入 {name} 进行确认",
     "The artifact is a release product of pipeline, and the environment selected below can be directly deployed by the artifact of this branch.": "制品为 Pipeline 中的 release 产物，下面所选环境能够通过该分支的制品直接部署",
     "The creation of the service takes a while, please wait a moment": "服务的创建需要一段时间，请稍等片刻",
@@ -892,6 +896,7 @@
     "Today": "今",
     "Tody is {time}": "今天是{time}",
     "Up to 255 characters for directory name": "目录名最大长度255",
+    "Up to 255 characters for url path": "url 路径最多255个字符",
     "When enabled, application deployment needs to be reviewed and approved by the project administrator.": "开启后，相关应用部署需要项目管理员审核同意后才能继续进行",
     "When you click directly, it will execute cases without environment.": "直接点击时，所选环境为无环境",
     "Work description": "工作内容",
@@ -1053,8 +1058,11 @@
     "choose certificate": "选择证书",
     "choose module": "选择模块",
     "choose the workflow file (master branch)": "选择workflow文件（master分支）",
+    "choose to set as a star app from the list of my apps below": "从以下我的应用列表中选择设置为标星应用",
+    "choose to set as a star project from the list of my projects below": "从以下我的项目列表中选择设置为标星项目",
     "circulation setting": "流转设置",
     "class catalog": "类目录",
+    "click to add URL path": "单击添加 URL 路径",
     "click to edit": "点击即可编辑",
     "click to expand": "点击展开",
     "clone application": "克隆应用",
@@ -1505,6 +1513,7 @@
     "pass": "通过",
     "passing rate": "通过率",
     "paste": "粘贴",
+    "paste the url path here": "请将 url 路径粘贴至该处",
     "path": "路径",
     "path must start with /": "path必须以 / 开头",
     "pending": "待处理",
@@ -1560,7 +1569,9 @@
     "please enter, within {num} characters": "请填写，{num} 字以内",
     "please fill in the correct ip": "请填写正确ip",
     "please fill in the correct port number": "请填写正确的端口号",
+    "please fill in the correct the url path!": "请填写正确的 url 路径!",
     "please fill in the test plan name": "请填写测试计划名称",
+    "please give the url path a simple and understandable name": "请给 url 路径取一个简单易懂的名称",
     "please input the value": "请输入值",
     "please input time": "请输入时间",
     "please pass in the method as the children of the exportPdf component": "请传入方法作为exportPdf组件的children",
@@ -1583,7 +1594,6 @@
     "plugin deployment": "插件部署",
     "port cannot be empty": "端口不能为空",
     "ports": "端口",
-    "position to today": "定位至今天",
     "post comment": "发表评论",
     "preconditions": "前置条件",
     "previous": "上一步",
@@ -1695,8 +1705,6 @@
     "serviceMesh": "服务网格",
     "set as default": "设为默认",
     "set default branch successfully": "设置默认分支成功",
-    "choose to set as a star app from the list of my apps below": "从以下我的应用列表中选择设置为标星应用",
-    "choose to set as a star project from the list of my projects below": "从以下我的项目列表中选择设置为标星项目",
     "set it to open all": "置为 \"全部打开\"",
     "set the default merge request description template": "设置默认的合并请求描述模板",
     "settings updated successfully": "更新设置成功",
@@ -1830,6 +1838,7 @@
     "tips of publish api 1": "发布版本需要按照语义化版本规范给出，参考以下链接",
     "tips of publish api 2": "当文档版本发生变化时，需要递增发布版本的主版本号",
     "title required": "标题必填",
+    "to configure": "进行配置",
     "total": "总量",
     "total number of interfaces": "接口总数",
     "total number of use cases": "用例总数",
@@ -1892,7 +1901,8 @@
     "yml-addon-not-exist-tip": "当前实例不存在，请切换到编辑模式重新添加",
     "your browser does not support WebSocket!": "您的浏览器不支持 WebSocket!",
     "{num} members are following": "{num} 位成员正在关注",
-    "{num} people followed": "{num} 人关注"
+    "{num} people followed": "{num} 人关注",
+    "项目主页": "项目主页"
   },
   "ecp": {
     "Edge computing": "边缘计算平台",
@@ -2751,7 +2761,6 @@
     "message content": "消息内容",
     "monitor log": "监控日志",
     "operation time": "操作时间",
-    "pattern": "模式",
     "please": "请",
     "please fill in the correct domain name": "请填写正确的域名",
     "please fill in the custom domain name": "请填写自定义域名",
