fix: update personal workbench page title

--- a/locales/en.json
+++ b/locales/en.json
@@ -102,7 +102,7 @@
     "Outbox username": "Outbox username",
     "Overview": "Overview",
     "Permanently delete {deleteItem}. Please pay special attention to it.": "Permanently delete {deleteItem}. Please pay special attention to it.",
-    "Personal dashboard": "Personal dashboard",
+    "Personal workbench": "Personal workbench",
     "Pipeline": "Pipeline",
     "Please enter a valid DingTalk address.": "Please enter a valid DingTalk address.",
     "Please enter a valid version number, such as x.y.z.": "please enter a valid version number，such as x.y.z",
