--- a/locales/zh.json
+++ b/locales/zh.json
@@ -102,7 +102,7 @@
     "Outbox username": "发件箱用户名",
     "Overview": "总览",
     "Permanently delete {deleteItem}. Please pay special attention to it.": "永久删除{deleteItem}，请谨慎操作",
-    "Personal dashboard": "个人仪表盘",
+    "Personal workbench": "个人工作台",
     "Pipeline": "流水线",
     "Please enter a valid DingTalk address.": "请输入正确钉钉地址",
     "Please enter a valid version number, such as x.y.z.": "请输入有效的版本号, 如：x.y.z",
