Feature/project release management (#2431)
* feat(common): add common components listSelect

* feat(dop): project release management

* feat: code optimization

* feat: add listSelect unit test case

* fix: code optimization

--- a/locales/zh.json
+++ b/locales/zh.json
@@ -641,6 +641,7 @@
     "ok": "确定",
     "on": "开",
     "one key all read": "一键已读",
+    "one click to clear": "一键清空",
     "open": "开启",
     "operate": "操作",
     "operated successfully": "操作成功",
@@ -779,6 +780,7 @@
     "required": "必需",
     "requirement": "需求",
     "requirement & task": "需求与任务",
+    "return to previous page": "返回上一页面",
     "reset": "重置",
     "reset Password": "重置密码",
     "reset account password": "重置账户密码",
@@ -825,7 +827,7 @@
     "select template": "选择模板",
     "select the existing": "选择已有",
     "selected template": "已选模板",
-    "selected {xx}": "已选择 {xx}",
+    "selected {name}": "已选择 {name}",
     "separated by comma, start with letters and can contain": "多个用,分隔，字母开头，可包含:数字 _ - . / $ # @ *， *只能放在末尾",
     "service": "服务",
     "service name": "服务名称",
