--- a/locales/en.json
+++ b/locales/en.json
@@ -641,6 +641,7 @@
     "ok": "ok",
     "on": "on",
     "one key all read": "one key all read",
+    "one click to clear": "one click to clear",
     "open": "open",
     "operate": "operate",
     "operated successfully": "operated successfully",
@@ -779,6 +780,7 @@
     "required": "required",
     "requirement": "requirement",
     "requirement & task": "requirement & task",
+    "return to previous page": "return to previous page",
     "reset": "reset",
     "reset Password": "reset Password",
     "reset account password": "reset account password",
@@ -825,7 +827,7 @@
     "select template": "select template",
     "select the existing": "select the existing",
     "selected template": "selected template",
-    "selected {xx}": "selected {xx}",
+    "selected {name}": "selected {name}",
     "separated by comma, start with letters and can contain": "multiple use, separate, start with a letter and can contain: numbers / _ - . $ # @ *, * only available in last",
     "service": "service",
     "service name": "Service Name",
