feat: update template of markdown

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -842,6 +842,7 @@
     "Library-app-intro": "A module/library is a code product that does not need to be deployed, and can be used in other applications after release, such as a Java jar package or npm package.",
     "Management": "Management",
     "Manual entry": "Manual entry",
+    "Markdown content length cannot exceed 65535 characters!": "Markdown content length cannot exceed 65535 characters!",
     "Maximum value of decline": "Maximum value of decline",
     "Merged": "Merged",
     "Method of parameter refers to variable": "Method of parameter refers to variable",
