--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -842,6 +842,7 @@
     "Library-app-intro": "库/模块是一种不需要部署的代码产物，发布后可以在其他应用中被依赖使用，比如一个 Java jar 包或 npm 包。",
     "Management": "管理",
     "Manual entry": "手动录入",
+    "Markdown content length cannot exceed 65535 characters!": "Markdown 内容长度不能超过 65535 个字符!",
     "Maximum value of decline": "衰退最大值",
     "Merged": "已合并",
     "Method of parameter refers to variable": "参数引用变量的方式",
